# ROVER

./: .env.example  .gitignore  .gitkeep  README.md  docker-compose.yml  package.xml  pytest.ini  requirements.txt  requirements2.txt  setup.py  test_full_system.sh
.github/workflows/: ci.yml
ai/: README.md  __init__.py
ai/config/: data_sources.yaml  inference_config.yaml  model_config.yaml
ai/data_fetcher/: __init__.py  ai4mars_loader.py  auth_manager.py  base_loader.py  cli.py  dem_processor.py  dependency_manager.py  gdrive_loader.py  huggingface_loader.py  kaggle_loader.py  nasa_loader.py  perseverance_api.py  roboflow_loader.py  s3_loader.py  universal_loader.py  url_loader.py  zenodo_loader.py
ai/inference/: __init__.py  batch_processor.py  model_cache.py  real_time_pipeline.py  realtime_pipeline.py
ai/models/: __init__.py  hazard_detector.py  mars_classifier.py  terrain_segmentation.py  traversability.py  unet.py
ai/models/weights/: README.md
ai/training/: __init__.py  __main__.py  augmentations.py  dataset.py  train_classification.py  train_segmentation.py
dashboard/: __init__.py  app.py
dashboard/assets/: style.css
dashboard/components/: __init__.py  camera_view.py  hazard_panel.py  map_viewer.py  metrics.py  science_notes.py  trajectory_planner.py
dashboard/config/: dashboard_config.yaml
dashboard/utils/: __init__.py  camera_stream.py  data_processor.py  direct_camera.py  ros_connector.py  visualizations.py
docs/: API.md  DATASET_SOURCES.md  SETUP.md  day_by_day.md
integration/: __init__.py  analysis_publisher.py  dashboard_bridge.py  image_subscriber.py
scripts/: build_system.sh  download_data.sh  download_datasets.py  mobile_stream_bridge.py  record_demo.sh  run_ai4mars.ps1  run_tests.sh  setup_env.ps1  setup_python_env.sh  setup_ros_humble.sh  test_full_system.sh
sim/: README.md
sim/launch/: full_system.launch.py  gazebo.launch.py  nav2.launch.py
sim/rover_description/: CMakeLists.txt  package.xml
sim/rover_description/config/: cartographer.lua  ekf.yaml  nav2_params.yaml
sim/rover_description/launch/: full_system.launch.py  gazebo.launch.py  nav2.launch.py
sim/rover_description/scripts/: goal_publisher.py
sim/rover_description/urdf/: rover.urdf.xacro  sensors.xacro
sim/rover_description/worlds/: generate_mars_heightmap.py  mars_terrain.world
sim/rover_integration/: CMakeLists.txt  package.xml  setup.py
sim/rover_integration/config/: bridge_params.yaml  model_config.yaml
sim/rover_integration/rover_integration/: __init__.py  analysis_publisher.py  costmap_generator.py  dashboard_bridge.py  image_subscriber.py  ros_ai_bridge.py  utils.py
sim/rover_integration/scripts/: analysis_publisher.py  dashboard_bridge.py  image_subscriber.py  ros_ai_bridge.py
sim/worlds/: mars_terrain.world
tests/: __init__.py  conftest.py  pytest.ini  test_dashboard.py  test_integration.py  test_navigation.py  test_perception.py  test_universal_loader.py
