<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>rover_description</name>
  <version>1.0.0</version>
  <description>Mars Rover Simulation Description and Launch Files</description>
  <maintainer email="dev@marsrover.ai">Mars Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Simulation dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_dev</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Navigation dependencies -->
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <depend>slam_toolbox</depend>
  <depend>cartographer_ros</depend>
  <depend>robot_localization</depend>

  <!-- Message dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- TF and utilities -->
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>